assets/css/app.css
body {
    position: relative;
    background: #efefee;
    min-height: 45rem;
    padding-bottom: 80px;
}

html {height:100%}

/* CHAT ROOM */

button.btn.btn-primary.message-btn {
    color: #1d2124;
}

/* NAVIGATION */

.navbar{
    background-color: #27ae60!important;
}

/* UPLOAD FORM */

.product-upload{
    padding: 5%;
}

/* USER LIST */

.user-table {
    margin-left: auto;
    margin-right: auto;
}

table.table {
    width: 100%;
    margin-bottom: 1rem;
    color: #1d2124;
}

button.btn.message-btn {
    color: white;
}

.unread-msg-alert {
    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
}

/* LOGIN */

body {
    background-color: #fff;
}

button.btn.btn-success {
    padding: 9px;
    background: #27ae60;
}

.form-signin {
    width: 100%;
    max-width: 330px;
    padding: 15px;
    margin: auto;
    margin-top: 50px;
}

.form-signin .checkbox {
    font-weight: 400;
}

.form-signin .form-control {
    position: relative;
    box-sizing: border-box;
    height: auto;
    padding: 10px;
    font-size: 16px;
}

.form-signin .form-control:focus {
    z-index: 2;
}

.form-signin input[type="email"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

/* LOGIN REGISTRATION */

.form-container {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    background: #fff;
}

.inactive {
    border-color: lightgray lightgray lightgray;
    background: darkgray;
    color: #fff;
}

.nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover {
    color: blue;
}

/* MESSAGES PAGE */

form.form-message {
    background: #e6e6e6;
    padding: 10px;
    border-radius: 5px;
    margin-left: 20%;
    margin-right: 20%;
}

.message-page{
    height: 100%;
    margin: 0;
    background: #7F7FD5;
    background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
    background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
}

.msg-head {
    text-align: center;
}

/* MESSAGES */

.sent-messages {
    background: linear-gradient(to top left, #81e852, #27ae60);
    border-radius: 50px;
    padding: 10px;
    width: fit-content;
    margin-block-end: 5px;
    min-width: 7%;
    max-width: 30%;
    text-align: center;
    word-wrap: break-word;
    clear: left;
    float: right;
    color: white;
}

.received-messages {
    background: linear-gradient(to top right, #3947ff, #6382ff);
    border-radius: 50px;
    padding: 10px;
    width: fit-content;
    text-align: center;
    margin-block-end: 5px;
    min-width: 7%;
    max-width: 30%;
    word-wrap: break-word;
    clear: right;
    color: white;
}

.message-status {
    border: 2px;
    margin-block-end: 5px;
    color: #000000;
    font-size: x-small;
    clear: right;
    margin-top: -5px;
    margin-left: 1%;
    margin-right: 1%;
}

.user-name {
    margin-bottom: 0px;
    margin-left: 1%;
    margin-right: 1%;
}

/* SEND MESSAGE BUTTON */

button.message-send {
    margin-left: auto;
    margin-right: auto;
    width: 30%;
    max-width: fit-content;
}

button.message-send:hover {
    background-image: linear-gradient(to right, #0ba360, #3cba92, #30dd8a, #2bb673);
    box-shadow: 0 4px 15px 0 rgba(23, 168, 108, 0.75);
}

.btn-hover {
    width: 200px;
    font-size: 16px;
    font-weight: 600;
    color: #ffffff;
    background: #27ae60;
    cursor: pointer;
    margin: 20px;
    height: 55px;
    text-align:center;
    border: none;
    background-size: 300% 100%;

    border-radius: 50px;
    -o-transition: all .4s ease-in-out;
    -webkit-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
}

.btn-hover:hover {
    background-position: 100% 0;
    -o-transition: all .4s ease-in-out;
    -webkit-transition: all .4s ease-in-out;
    transition: all .4s ease-in-out;
}

.btn-hover:focus {
    outline: none;
}

/* UNREAD MESSAGE EMAIL */

img#wren-logo {
    align-content: center;
    width: 30%;
    height: 30%;
}

